--- a/MyApplicationSienke/app/src/main/res/layout/activity_user_detail_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_user_detail_info.xml
@@ -149,20 +149,18 @@
                         android:id="@+id/meter_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
                         android:hint="添加"
-                        android:gravity="left"
+                        android:gravity="right"
                         android:textColor="@color/text_gray"
                         android:textSize="12sp"
                         android:inputType="textVisiblePassword"
                         android:digits="0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:maxLength="40"
                         android:background="@drawable/normal_button_bg_selector"
-                        android:paddingTop="4dp"
+                        android:paddingTop="2dp"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
-                        android:paddingBottom="4dp"/>
+                        android:paddingBottom="2dp"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -205,13 +203,13 @@
                         android:hint="添加"
                         android:textColor="@color/text_gray"
                         android:textSize="12sp"
-                        android:gravity="left"
+                        android:gravity="right"
                         android:maxLength="40"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:background="@drawable/normal_button_bg_selector"
-                        android:paddingTop="4dp"
-                        android:paddingBottom="4dp"/>
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -233,7 +231,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:drawableLeft="@mipmap/user_address"
                     android:drawablePadding="20dp"
                     android:gravity="center_vertical"
@@ -243,14 +240,16 @@
 
                 <ScrollView
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:layout_marginLeft="20dp">
+                    android:layout_marginLeft="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:fillViewport="true">
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal"
-                        android:layout_gravity="right">
+                        android:gravity="center_vertical|right">
                         <EditText
                             android:id="@+id/user_address"
                             android:layout_width="wrap_content"
@@ -258,13 +257,12 @@
                             android:hint="添加"
                             android:textColor="@color/text_gray"
                             android:textSize="12sp"
-                            android:maxLength="40"
                             android:background="@drawable/normal_button_bg_selector"
-                            android:gravity="left"
+                            android:gravity="top"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
-                            android:paddingTop="4dp"
-                            android:paddingBottom="4dp"/>
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"/>
                     </LinearLayout>
                 </ScrollView>
 
