--- a/MyApplicationSienke/app/src/main/res/layout/activity_query.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_query.xml
@@ -10,6 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/theme_colors">
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:background="@drawable/circle_selector"
+            android:src="@drawable/back_selector" />
 
         <TextView
             android:layout_width="wrap_content"
