--- a/MyApplicationSienke/app/src/main/res/layout/activity_security.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_security.xml
@@ -21,7 +21,16 @@
             android:layout_marginLeft="10dp"
             android:text="张三"
             android:textColor="@android:color/white"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:background="@drawable/circle_selector"
+            android:src="@drawable/back_selector" />
 
         <TextView
             android:id="@+id/name"
