--- a/MyApplicationSienke/app/src/main/res/layout/activity_move_login.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_move_login.xml
@@ -42,13 +42,68 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
         android:background="@mipmap/info"
-        android:drawableRight="@mipmap/lock"
+        android:drawableRight="@mipmap/lock5"
         android:hint="密码"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:textColor="@color/gray"
         android:textSize="15sp" />
+
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_alignParentLeft="true">
+            <CheckBox
+                android:id="@+id/remind_me"
+                android:background="@drawable/check_box_selector1"
+                android:button="@null"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="记住我"
+                android:textColor="@android:color/white"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:textSize="12sp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_alignParentRight="true">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="自动登录"
+                android:textColor="@android:color/white"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:textSize="12sp"/>
+            <CheckBox
+                android:id="@+id/login"
+                android:background="@drawable/check_box_selector1"
+                android:button="@null"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+        </LinearLayout>
+
+
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/Ok_byt"
