--- a/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
@@ -36,211 +36,13 @@
         android:scaleType="fitXY"
         android:src="@mipmap/banner2" />
 
-    <LinearLayout
+    <GridView
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
+        android:verticalSpacing="10dp"
+        android:numColumns="3">
 
-        <LinearLayout
-            android:id="@+id/zsbg"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingLeft="20dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/zsbg" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/check_1"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/check_box_selector"
-                    android:button="@null"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="掌上办公" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/gzl"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingLeft="20dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/gzl" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/check_2"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/check_box_selector"
-                    android:button="@null"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="工作流" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/qwx"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingLeft="20dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/qwx" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/check_3"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/check_box_selector"
-                    android:button="@null"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="抢维修" />
-
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/ydaj"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingLeft="20dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ydaj" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/check_4"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/check_box_selector"
-                    android:button="@null"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="移动安检" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ydcx"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:paddingLeft="20dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ydcx" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/check_5"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/check_box_selector"
-                    android:button="@null"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="移动查询" />
-            </LinearLayout>
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/Ok_byt"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/user_detail_save_btn_selector"
-        android:gravity="center"
-        android:text="安 装"
-        android:textColor="@android:color/white"
-        android:textSize="18sp" />
+    </GridView>
 </LinearLayout>
