--- a/MyApplicationSienke/app/src/main/res/layout/activity_upload.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_upload.xml
@@ -57,8 +57,13 @@
                 android:layout_height="wrap_content"
                 android:divider="@color/white_transparent"
                 android:dividerHeight="8dp"
-                android:padding="5dp"
-                android:listSelector="#00000000"/>
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:listSelector="#00000000"
+                android:scrollbarThumbVertical="@color/text_blue"
+                android:scrollbarStyle="insideInset"
+                android:scrollbarSize="2dp"/>
             <TextView
                 android:id="@+id/no_data"
                 android:layout_width="wrap_content"
