--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_download_detail.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_download_detail.xml
@@ -55,7 +55,10 @@
                 android:horizontalSpacing="8dp"
                 android:numColumns="2"
                 android:verticalSpacing="10dp"
-                android:listSelector="#00000000"/>
+                android:listSelector="#00000000"
+                android:scrollbarThumbVertical="@color/text_blue"
+                android:scrollbarStyle="insideInset"
+                android:scrollbarSize="2dp"/>
 
         </LinearLayout>
 
