--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_query_loading.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_query_loading.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:background="@color/white_transparent">
 
-    <ImageView
-        android:id="@+id/frame_animation"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/frame_animation_list" />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="10dp"
+        android:background="@drawable/loading_shape">
+        <ImageView
+            android:id="@+id/frame_animation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/frame_animation_list" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="正在努力加载中..."
-        android:textSize="12sp"
-        android:textColor="@color/text_black" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="正在努力加载中..."
+            android:textSize="12sp"
+            android:textColor="@color/text_black" />
+    </LinearLayout>
 
 </LinearLayout>
