--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_security_type.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_security_type.xml
@@ -10,6 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:dividerHeight="1dp"
-        android:padding="3dp" />
+        android:padding="3dp"
+        android:listSelector="#00000000"
+        android:scrollbarThumbVertical="@color/text_blue"
+        android:scrollbarStyle="insideInset"
+        android:scrollbarSize="2dp"/>
 
 </LinearLayout>
