--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_select_task_down.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_select_task_down.xml
@@ -40,6 +40,9 @@
                 android:dividerHeight="8dp"
                 android:padding="5dp"
                 android:listSelector="#00000000"
+                android:scrollbarThumbVertical="@color/text_blue"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbarSize="2dp"
                 android:visibility="gone"/>
 
             <ImageView
