--- a/MyApplicationSienke/app/src/main/res/values/styles.xml
+++ b/MyApplicationSienke/app/src/main/res/values/styles.xml
@@ -22,14 +22,14 @@
 
     //弹出框透明样式
     <style name="dialog" parent="@android:style/Theme.Dialog">
-         <item name="android:windowFrame">@null</item>   <!--边框-->
-         <item name="android:windowIsFloating">true</item>  <!--是否浮现在activity之上-->
-         <item name="android:windowIsTranslucent">false</item>  <!--半透明-->
-         <item name="android:windowNoTitle">true</item>   //无标题
-         <item name="android:background">@color/transparent</item>
-         <item name="android:windowBackground">@color/transparent</item>
-         <item name="android:backgroundDimEnabled">false</item>  <!--模糊-->
-         <item name="android:backgroundDimAmount">0.6</item>   //黑暗度
+        <item name="android:windowFrame">@null</item>   <!--边框-->
+        <item name="android:windowIsFloating">true</item>  <!--是否浮现在activity之上-->
+        <item name="android:windowIsTranslucent">false</item>  <!--半透明-->
+        <item name="android:windowNoTitle">true</item>   //无标题
+        <item name="android:background">@color/transparent</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:backgroundDimEnabled">false</item>  <!--模糊-->
+        <item name="android:backgroundDimAmount">0.6</item>   //黑暗度
     </style>
 
     <!--下拉列表样式-->
@@ -48,7 +48,8 @@
 
     <style name="mypopwindow_anim_style">
         <item name="android:windowEnterAnimation">@anim/popshow_anim</item>
-        <item name="android:windowExitAnimation">@anim/pophidden_anim</item>
+        <!--<item name="android:windowExitAnimation">@anim/pophidden_anim</item>-->
+        <item name="android:windowExitAnimation">@anim/out_anim</item>
     </style>
 
 
