--- a/MyApplicationSienke/app/src/main/res/layout/activity_move_login.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_move_login.xml
@@ -98,7 +98,7 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/Ok_byt"
+        android:id="@+id/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
