--- a/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_move_homepage.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_linearlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/root_relative"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/theme_colors">
@@ -41,8 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="15dp"
-        android:verticalSpacing="10dp"
-        android:numColumns="3">
+        android:numColumns="3"
+        android:verticalSpacing="10dp">
 
     </GridView>
 </LinearLayout>
