--- a/MyApplicationSienke/app/src/main/res/layout/activity_meter_user_detail_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_meter_user_detail_info.xml
@@ -1397,7 +1397,7 @@
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_weight="4"
-        android:background="@drawable/keyboard_pictrue"
+        android:background="@mipmap/keyboard_pictrue"
         android:orientation="vertical"
         android:visibility="gone">
 
