--- a/MyApplicationSienke/app/src/main/res/layout/newtask_listview_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/newtask_listview_item.xml
@@ -42,6 +42,30 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="用气性质:"
+                    android:textColor="@color/text_black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/user_property"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="居民用气"
+                    android:textColor="@color/text_gray"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -111,7 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="表编号:"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -133,7 +157,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="电话:"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -166,7 +190,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="新编号:"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -190,7 +214,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="老编号:"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -223,7 +247,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="用户地址:"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
