--- a/MyApplicationSienke/app/src/main/res/layout/userlist_listview_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/userlist_listview_item.xml
@@ -67,7 +67,6 @@
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
 
-
         </LinearLayout>
 
         <LinearLayout
@@ -89,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:text="表编号:"
-                    android:textColor="#a8a8a8a8"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -98,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="012345678"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_gray"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -113,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="电话:"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -121,7 +120,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="13802596472"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_gray"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -146,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:text="安检类型:"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -154,7 +153,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="通气安检"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_gray"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -169,7 +168,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="老编号："
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -177,12 +176,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="565464654"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_gray"
                     android:textSize="12sp" />
 
             </LinearLayout>
 
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:text="用气性质:"
+                android:textColor="@color/text_black"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:id="@+id/user_property"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="012345678"
+                android:textColor="@color/text_gray"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -203,7 +223,7 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:text="用户地址:"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -211,7 +231,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="水果湖苹果路123号"
-                    android:textColor="#a8a8a8"
+                    android:textColor="@color/text_gray"
                     android:textSize="12sp" />
 
             </LinearLayout>
