--- a/MyApplicationSienke/app/src/main/res/layout/activity_cbj.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_cbj.xml
@@ -1,32 +1,42 @@
 <cc.thksoft.myfirstpro.util.AnimationTabHost xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/tabhost"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    tools:context=".CBJActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.CBJActivity">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="#1A4B76"
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/cbj_back_btn"
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1">
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:gravity="center"
 
+                android:onClick="onAction">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dip"
+                    android:background="@drawable/mune_btn_selector" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="4"
                 android:gravity="center">
 
@@ -42,7 +52,7 @@
             <FrameLayout
                 android:id="@+id/systemSet"
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:onClick="">
@@ -64,21 +74,21 @@
 
         <FrameLayout
             android:id="@android:id/tabcontent"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="0.0dp"
             android:layout_weight="9.0"
             android:background="#FFFFFF" />
 
         <TabWidget
             android:id="@android:id/tabs"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.0"
             android:visibility="gone" />
 
         <RadioGroup
             android:id="@+id/main_radio"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="0.0dp"
             android:layout_weight="1.0"
             android:background="@mipmap/tabbar_bgblack"
