--- a/MyApplicationSienke/app/src/main/res/layout/activity_cbj.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_cbj.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="#1A4B76"
+            android:background="@color/theme_colors"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dip"
-                    android:background="@drawable/mune_btn_selector" />
+                    android:background="@drawable/back_selector" />
             </LinearLayout>
 
             <LinearLayout
