--- a/MyApplicationSienke/app/src/main/res/layout/activity_bianhao.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_bianhao.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#1A4B76"
+        android:background="@color/theme_colors"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
-                android:background="@drawable/mune_btn_selector"
+                android:background="@drawable/back_selector"
                 android:onClick="onAction" />
         </LinearLayout>
 
