--- a/MyApplicationSienke/app/src/main/res/layout/activity_cbbcx.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_cbbcx.xml
@@ -6,16 +6,16 @@
     android:orientation="vertical">
     <!-- 标题 -->
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#1A4B76"
+        android:background="@color/theme_colors"
         android:orientation="horizontal">
 
         <LinearLayout
 
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:gravity="center">
@@ -25,13 +25,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
-                android:background="@drawable/mune_btn_selector"
+                android:background="@drawable/back_selector"
                 android:onClick="onAction" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_weight="4"
             android:gravity="center">
 
@@ -47,8 +47,10 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"></LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -58,13 +60,13 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -94,7 +96,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -125,7 +127,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
@@ -134,7 +136,7 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="fill_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center">
 
@@ -148,7 +150,7 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="fill_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center">
 
@@ -163,7 +165,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
             android:layout_weight="6"
@@ -188,7 +190,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_line"
-                    android:visibility="gone"></ListView>
+                    android:visibility="gone">
+
+                </ListView>
             </LinearLayout>
 
             <View
