--- a/MyApplicationSienke/app/src/main/res/layout/activity_chaobiaotongji.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_chaobiaotongji.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#1A4B76"
+        android:background="@color/theme_colors"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -21,7 +21,6 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:gravity="center"
-
             android:onClick="onAction">
 
             <ImageView
