--- a/MyApplicationSienke/app/src/main/res/layout/activity_cx.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_cx.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/tabhost"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@mipmap/statistics_bg"
     android:orientation="vertical"
     tools:context=".BianHaoCXActivity">
@@ -12,20 +12,20 @@
     <!-- 中间部分 -->
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:background="@mipmap/statistics_bg">
 
         <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:fadingEdge="vertical"
             android:scrollbars="vertical">
 
             <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
@@ -35,7 +35,7 @@
 
                 <LinearLayout
                     android:id="@+id/by_met_num"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -44,7 +44,7 @@
                     android:onClick="onAction">
 
                     <TextView
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:gravity="center"
                         android:text="转到指定抄表本"
@@ -56,7 +56,7 @@
 
                 <LinearLayout
                     android:id="@+id/by_user_name"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -66,7 +66,7 @@
                     android:onClick="onAction">
 
                     <TextView
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="55dp"
                         android:gravity="center"
                         android:text="按用户名称查询"
@@ -77,7 +77,7 @@
 
                 <LinearLayout
                     android:id="@+id/by_user_num"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -87,7 +87,7 @@
                     android:onClick="onAction">
 
                     <TextView
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:gravity="center"
                         android:text="按用户编号查询"
@@ -98,7 +98,7 @@
 
                 <LinearLayout
                     android:id="@+id/by_user_met"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -108,7 +108,7 @@
                     android:onClick="onAction">
 
                     <TextView
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:gravity="center"
                         android:text="按用户表号查询"
@@ -120,7 +120,7 @@
 
                 <LinearLayout
                     android:id="@+id/by_user_minus"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -131,7 +131,7 @@
                     android:visibility="gone">
 
                     <TextView
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:gravity="center"
                         android:text="查看特殊用户"
