--- a/MyApplicationSienke/app/src/main/res/layout/activity_user_name.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_user_name.xml
@@ -6,16 +6,16 @@
     android:orientation="vertical">
     <!-- 标题 -->
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#1A4B76"
+        android:background="@color/theme_colors"
         android:orientation="horizontal">
 
         <LinearLayout
 
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:gravity="center">
@@ -25,13 +25,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
-                android:background="@drawable/mune_btn_selector"
+                android:background="@drawable/back_selector"
                 android:onClick="onAction" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_weight="4"
             android:gravity="center">
 
@@ -47,20 +47,20 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1">
 
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -80,35 +80,35 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center">
 
                 <Button
                     android:id="@+id/btn_quxiao"
                     android:layout_width="120dp"
-                    android:layout_height="fill_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/query_btn_cancel_selector"
                     android:onClick="onAction" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center">
 
                 <Button
                     android:id="@+id/btn_quedin"
                     android:layout_width="120dp"
-                    android:layout_height="fill_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/query_btn_done_selector"
                     android:onClick="onAction" />
             </LinearLayout>
