--- a/MyApplicationSienke/app/src/main/res/layout/activity_verification.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_verification.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
@@ -38,13 +38,13 @@
 
         <FrameLayout
             android:id="@+id/vertification_Frame"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp">
 
             <EditText
                 android:id="@+id/vertification_Code"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@mipmap/login_tfcode_white"
                 android:gravity="left|center_vertical"
@@ -56,7 +56,7 @@
 
             <TextView
                 android:id="@+id/vertification_Code_sure"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/vertify_btn_shape_no"
                 android:gravity="center"
@@ -67,7 +67,7 @@
         </FrameLayout>
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -85,7 +85,7 @@
 
             <LinearLayout
                 android:id="@+id/vertification_open"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -94,7 +94,7 @@
 
                 <EditText
                     android:id="@+id/vertification_ip"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="5dp"
@@ -108,7 +108,7 @@
 
                 <EditText
                     android:id="@+id/vertification_port"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:background="@mipmap/editbox_background_normal"
@@ -133,7 +133,7 @@
                         <Button
                             android:id="@+id/vertification_cancel"
                             android:layout_width="match_parent"
-                            android:layout_height="fill_parent"
+                            android:layout_height="match_parent"
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="5dp"
                             android:background="@drawable/selector_btn"
@@ -149,7 +149,7 @@
                         <Button
                             android:id="@+id/vertification_sure"
                             android:layout_width="match_parent"
-                            android:layout_height="fill_parent"
+                            android:layout_height="match_parent"
                             android:layout_gravity="right|center_vertical"
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="4dp"
