--- a/MyApplicationSienke/app/src/main/res/layout/activity_xiaozai.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_xiaozai.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#1A4B76"
+        android:background="@color/theme_colors"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -259,7 +259,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2.5"
-                android:background="#1A4B76"
+                android:background="@color/theme_colors"
                 android:onClick="onAction"
                 android:text="下载"
                 android:textColor="#FFFFFF"
