--- a/MyApplicationSienke/app/src/main/res/layout/activity_security.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_security.xml
@@ -94,4 +94,65 @@
             android:textSize="12sp" />
     </RadioGroup>
 
+    <!--<RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/gray_thin"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/option_rbt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/public_info_radio_bg"
+                android:button="@null"
+                android:drawableLeft="@drawable/radiogroup_task_choose_selector"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:text="选项"
+                android:textColor="@drawable/business_text_selector"
+                android:textSize="12sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/data_transfer_rbt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/public_info_radio_bg"
+                android:button="@null"
+                android:drawableLeft="@drawable/radiogroup_data_transfer_selector"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:text="传输"
+                android:textColor="@drawable/business_text_selector"
+                android:textSize="12sp"/>
+        </LinearLayout>
+
+    </RadioGroup>-->
+
 </LinearLayout>
