--- a/MyApplicationSienke/app/src/main/res/layout/activity_shouyechaobiaos.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_shouyechaobiaos.xml
@@ -5,105 +5,94 @@
     android:orientation="vertical">
 
     <!-- 标题 -->
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.015"
+        android:layout_height="50dp"
         android:background="@mipmap/nav_bg"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/HomeMeter_back"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:onClick="onButton">
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/circle_selector"
+            android:padding="10dp"
+            android:src="@drawable/back_selector" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:background="@drawable/mune_btn_selector" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/userlist_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerInParent="true"
+            android:text="用户列表"
+            android:textColor="#FFECEC"
+            android:textSize="22sp" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4">
-
-            <TextView
-                android:id="@+id/userlist_tv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="0.4"
-                android:gravity="center"
-                android:text="用户列表"
-                android:textColor="#FFECEC"
-                android:textSize="22sp" />
-        </LinearLayout>
-
-        <LinearLayout
+        <ImageView
             android:id="@+id/control_page_show"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:onClick="onAction">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:background="@drawable/showlistview_item_selector"
-                android:gravity="center" />
-        </LinearLayout>
-    </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/showlistview_item_selector"
+            android:padding="10dp"
+            android:gravity="center"/>
+    </RelativeLayout>
     <!-- 中间部分 -->
     <LinearLayout
         android:id="@+id/page_show_ll"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:background="@mipmap/usertable_cellbg2x"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="10dp"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/page_up"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:background="@drawable/tv_1"
+            android:background="@drawable/user_detail_save_btn_selector"
+            android:paddingTop="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
+            android:paddingBottom="5dp"
             android:gravity="center"
             android:text="上一页"
             android:textSize="15sp" />
 
         <TextView
             android:id="@+id/page_show"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="#e0ffff"
+            android:background="@color/gray_thin"
             android:gravity="center"
             android:padding="2dp"
             android:text="1/8" />
 
         <TextView
             android:id="@+id/page_down"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:background="@drawable/tv_1"
+            android:background="@drawable/user_detail_save_btn_selector"
             android:gravity="center"
             android:text="下一页"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -153,26 +142,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton">
-
-            </Button>
+                android:background="@drawable/select_colorchange"/>
 
             <Button
                 android:id="@+id/listtwo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
 
             <Button
                 android:id="@+id/listthree"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange"/>
 
         </LinearLayout>
 
@@ -188,24 +172,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange"/>
 
             <Button
                 android:id="@+id/listfive"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
 
             <Button
                 android:id="@+id/listsix"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
         </LinearLayout>
 
         <LinearLayout
@@ -220,24 +201,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
 
             <Button
                 android:id="@+id/listeight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
 
             <Button
                 android:id="@+id/listnight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
         </LinearLayout>
 
         <LinearLayout
@@ -252,24 +230,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
 
             <Button
                 android:id="@+id/listzero"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
 
             <Button
                 android:id="@+id/listdelete"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/select_colorchange"
-                android:onClick="onButton" />
+                android:background="@drawable/select_colorchange" />
         </LinearLayout>
     </LinearLayout>
 
