--- a/MyApplicationSienke/app/src/main/res/layout/activity_user_name.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_user_name.xml
@@ -5,113 +5,93 @@
     android:background="@mipmap/statistics_bg"
     android:orientation="vertical">
     <!-- 标题 -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/theme_colors"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+        android:background="@color/theme_colors">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/circle_selector"
+            android:padding="10dp"
+            android:src="@drawable/back_selector" />
 
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:gravity="center">
+        <TextView
+            android:id="@+id/textviewshezi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="设置"
+            android:textColor="@android:color/white"
+            android:textSize="22sp" />
+    </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/uhm_back_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:background="@drawable/back_selector"
-                android:onClick="onAction" />
-        </LinearLayout>
+    <EditText
+        android:id="@+id/edit_user_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/normal_button_bg_selector"
+        android:hint="请输入用户名"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:textColor="@color/text_gray"
+        android:gravity="center"
+        android:textSize="14sp"
+        android:layout_margin="10dp"/>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/textviewshezi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="设置"
-                android:textColor="#FFECEC"
-                android:textSize="22dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-        </LinearLayout>
-    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_thin" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/cancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center">
+            android:layout_marginRight="50dp"
+            android:background="@drawable/search"
+            android:gravity="center_horizontal"
+            android:paddingBottom="5dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="5dp"
+            android:text="取消"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/edit_usname"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@mipmap/editbox_background_normal"
-                android:hint="请输入用户名"
-                android:paddingLeft="5dp"
-                android:singleLine="true">
-
-            </EditText>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/query"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <Button
-                    android:id="@+id/btn_quxiao"
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/query_btn_cancel_selector"
-                    android:onClick="onAction" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <Button
-                    android:id="@+id/btn_quedin"
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/query_btn_done_selector"
-                    android:onClick="onAction" />
-            </LinearLayout>
-        </LinearLayout>
+            android:background="@drawable/user_detail_save_btn_selector"
+            android:gravity="center_horizontal"
+            android:paddingBottom="5dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="5dp"
+            android:text="查询"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_thin" />
+
 </LinearLayout>
